tests/public/Public-9.mj
int main() {

    int x = 1;
    char[][] arr2 = { {x, 2}, {3, 4} }; // error: x is of type int, not char
    println(arr2);

    return 0;
}